--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,6 @@
+[includeIf "gitdir:~/src/OttawaTechNerds/"]
+    path = .gitconfig-OttawaTechNerds
+
 [user]
 	email = caleb.stdenis@gmail.com
 	name = Caleb St-Denis
@@ -7,8 +10,10 @@
 
 [core]
 	pager = less -+$LESS -RS # for macOS trackpad scroll
+
 [init]
 	defaultBranch = main
 
-[includeIf "gitdir:~/src/OttawaTechNerds/"]
-    path = .gitconfig-OttawaTechNerds
+[diff "lockb"]
+	textconv = bun
+	binary = true
